--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* Variables */
 :root {
+  /* Define global variables for the CSS, these can be used throughout the stylesheet */
   --body-color: #fcfdfe;
   --checkout-color: #8f6ed5;
   --elements-color: #6772e5;
@@ -15,6 +16,7 @@
 }
 
 body {
+  /* Set the body margin, padding, background color, and enable scrolling */
   margin: 0;
   padding: 0;
   background: var(--body-color);
@@ -22,17 +24,20 @@ body {
 }
 
 * {
+  /* Set box-sizing, font-family, and disable tap highlight color for all elements */
   box-sizing: border-box;
   font-family: var(--body-font-family);
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #__next {
+  /* Center the content */
   display: flex;
   justify-content: center;
 }
 
 .container {
+  /* Set the max-width for the container, padding, and display it as a flex row */
   max-width: var(--container-width-max);
   padding: 45px 25px;
   display: flex;
@@ -40,11 +45,13 @@ body {
 }
 
 .page-container {
+  /* Set padding-bottom and max-width for the page container */
   padding-bottom: 60px;
   max-width: var(--page-width-max);
 }
 
 h1 {
+  /* Set font-weight, color, margin, font-size, and line-height for h1 elements */
   font-weight: 600;
   color: var(--h1-color);
   margin: 6px 0 12px;
@@ -53,56 +60,67 @@ h1 {
 }
 
 h1 span.light {
+  /* Set color for the span.light elements inside h1 elements */
   color: var(--h3-color);
 }
 
 h2 {
+  /* Set color and margin for h2 elements */
   color: var(--h2-color);
   margin: 8px 0;
 }
 
 h3 {
+  /* Set font-size, color, and margin for h3 elements */
   font-size: 17px;
   color: var(--h3-color);
   margin: 8px 0;
 }
 
 a {
+  /* Set color and text-decoration for a elements */
   color: var(--checkout-color);
   text-decoration: none;
 }
 
 header {
+  /* Set position, flex, padding-right, and position for header elements */
   position: relative;
   flex: 0 0 250px;
   padding-right: 48px;
 }
 
 .header-content {
+  /* Set position, top, max-width, and position for header-content elements */
   position: sticky;
   top: 45px;
 }
 
 .logo img {
+  /* Set height, margin-bottom, and width for logo images */
   height: 20px;
   margin-bottom: 52px;
 }
 
 ul,
 li {
+  /* Remove list-style, padding, and margin for ul and li elements */
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
 .card-list {
+  /* Set display, flex-wrap, align-content, padding-top, and width for card-list elements */
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
   padding-top: 64px;
+  width: 100%;
 }
 
 .card {
+  /* Set display, border-radius, position, padding, height, flex, min-width, width, margin, text-decoration, and box-shadow for card elements */
   display: block;
   border-radius: 10px;
   position: relative;
@@ -116,14 +134,17 @@ li {
   box-shadow: -20px 20px 60px #abacad, 20px -20px 60px #ffffff;
 }
 .card h2 {
+  /* Set color for h2 elements inside card elements */
   color: #fff;
 }
 .card h2.bottom {
+  /* Set position and bottom for h2.bottom elements inside card elements */
   position: absolute;
   bottom: 10px;
 }
 
 .card img {
+  /* Set width, position, top, left, and transform for images inside card elements */
   width: 80%;
   position: absolute;
   top: 50%;
@@ -132,6 +153,7 @@ li {
 }
 
 .error-message {
+  /* Set color for error-message elements */
   color: #ef2961;
 }
 
@@ -139,188 +161,6 @@ li {
 fieldset,
 input[type='number'],
 input[type='text'] {
+  /* Set border-radius, padding, width, background, appearance, font-size, margin-top, and box-shadow for FormRow, fieldset, input[type='number'], and input[type='text'] elements */
   border-radius: var(--radius);
-  padding: 5px 12px;
-  width: 100%;
-  background: #fff;
-  appearance: none;
-  font-size: 16px;
-  margin-top: 10px;
-}
-
-input[type='range'] {
-  margin: 5px 0;
-  width: 100%;
-}
-
-button {
-  border-radius: var(--radius);
-  color: white;
-  font-size: larger;
-  border: 0;
-  padding: 12px 16px;
-  margin-top: 10px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.2s ease;
-  display: block;
-  width: 100%;
-}
-button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-.elements-style {
-  color: var(--elements-color);
-  border: 1px solid var(--elements-color);
-}
-.elements-style-background {
-  background: var(--elements-color);
-  transition: box-shadow var(--transition-duration);
-}
-.card.elements-style-background:hover {
-  box-shadow: 20px 20px 60px #464e9c, -20px -20px 60px #8896ff;
-}
-.checkout-style {
-  color: var(--checkout-color);
-  border: 1px solid var(--checkout-color);
-}
-.checkout-style-background {
-  background: var(--checkout-color);
-  transition: box-shadow var(--transition-duration);
-}
-.card.checkout-style-background:hover {
-  box-shadow: 20px 20px 60px #614b91, -20px -20px 60px #bd91ff;
-}
-.cart-style-background {
-  background: teal;
-  transition: box-shadow var(--transition-duration);
-}
-.card.cart-style-background:hover {
-  box-shadow: 20px 20px 60px teal, -20px -20px 60px teal;
-}
-
-/* Products */
-.products {
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(2, 1fr);
-  margin-top: 3rem;
-}
-
-.product img {
-  max-width: 100%;
-}
-
-/* Test card number */
-.test-card-notice {
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-.card-number {
-  display: inline;
-  white-space: nowrap;
-  font-family: Menlo, Consolas, monospace;
-  color: #3c4257;
-  font-weight: 500;
-}
-.card-number span {
-  display: inline-block;
-  width: 4px;
-}
-
-/* Code block */
-code,
-pre {
-  font-family: 'SF Mono', 'IBM Plex Mono', 'Menlo', monospace;
-  font-size: 12px;
-  background: rgba(0, 0, 0, 0.03);
-  padding: 12px;
-  border-radius: var(--radius);
-  max-height: 500px;
-  width: var(--page-width-max);
-  overflow: auto;
-}
-
-.banner {
-  max-width: 825px;
-  margin: 0 auto;
-  font-size: 14px;
-  background: var(--body-color);
-  color: #6a7c94;
-  border-radius: 50px;
-  box-shadow: -20px 20px 60px #abacad, 20px -20px 60px #ffffff;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 15px;
-  line-height: 1.15;
-  position: fixed;
-  bottom: 2vh;
-  left: 0;
-  right: 0;
-  text-align: center;
-  justify-content: center;
-}
-
-@media only screen and (max-width: 980px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .header-content {
-    max-width: 280px;
-    position: relative;
-    top: 0;
-  }
-
-  .card {
-    margin: 0 20px 20px 0;
-    box-shadow: none;
-  }
-
-  .card-list {
-    padding-top: 0;
-  }
-
-  .banner {
-    box-shadow: none;
-    bottom: 0;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .card {
-    display: block;
-    border-radius: 8px;
-    flex: 1 0 100%;
-    max-width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-    margin: 0 0 20px 0;
-    box-shadow: none;
-  }
-
-  .card-list {
-    padding-top: 0;
-  }
-
-  code,
-  pre,
-  h3 {
-    display: none;
-  }
-
-  .banner {
-    box-shadow: none;
-    bottom: 0;
-  }
-}
+  padding
